5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4351/executions/1613_2426.log
== TEST (2019-04-04 18:47:19) 
-- CODE:
t=float(input("tempo gasto")
v=float(input("velocidade")
distancia=float(t*v)
litros_gastos=1/12*distancia
print(distancia)
print(litros_gastos)
-- ERROR:
File "XXXX", line 2
    v=float(input()
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:47:31) 
-- CODE:
t=float(input("tempo gasto"))
v=float(input("velocidade"))
distancia=float(t*v)
litros_gastos=1/12*distancia
print(distancia)
print(litros_gastos)
-- OUTPUT:
900.0
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:47:44) 
-- CODE:
t=float(input("tempo gasto"))
v=float(input("velocidade"))
distancia=float(t*v)
litros_gastos=1/12*distancia
print(distancia)
print(litros_gastos)
-- EXECUTION TIME:
0.1485
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0
75.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
600.0
50.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
96.0
8.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
